# wishlistr-api

./: .gitignore  CODEOWNERS  README.md  pyproject.toml  requirements.txt
app/: auth.py  crud.py  database.py  main.py  models.py  schemas.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: login.py  users.py  wishes.py  wishlists.py
app/core/: config.py  security.py
app/crud/: user.py  wish.py  wishlist.py
app/models/: __init__.py  user.py  wish.py  wishlist.py
app/queries/: base.py  user.py  wish.py  wishlist.py
app/routers/: __init__.py  user.py  user_router.py  wish.py  wish_router.py
app/schemas/: __init__.py  user.py  wish.py
